<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blobhaikei2"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarContent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profil"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:src="@drawable/profil">

        </de.hdodenhof.circleimageview.CircleImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:layout_toStartOf="@+id/img_profil"
            android:orientation="vertical">

            <TextView
                style="@style/TextHeader"
                android:text="Welcome ," />

            <TextView
                android:id="@+id/tv_username"
                style="@style/TextHeader"
                android:text="User name" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_history"
            style="@style/FabSettings"
            android:src="@drawable/ic_baseline_history_24" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/jdl_lokasi"
            android:textSize="16sp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/lokasi_terkini"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_carbon_location" />

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Data Historimu"
            android:textSize="18sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/tv_noData"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/card_clr"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/tidak_ada_data"
                android:textAlignment="center"
                android:textSize="18sp"
                app:drawableTopCompat="@drawable/empty_data" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/see_more"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            app:drawableRightCompat="@drawable/baseline_chevron_right_24" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_list_history_user" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pesan"
        style="@style/ButtonPesan"
        android:text="@string/btn_ambulance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>